# plat

./: .gitignore  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
assets/programs/: fibonacci.plat
programs/: calculations.plat  fibonacci.plat  fizzbuzz.plat
src/: ast.rs  lexer.rs  llvmir.rs  main.rs  tokenize.rs
test/: helloworld.ll
test/asm/: helloworld.s
test/exec/: helloworld
test/llvmir/: helloworld.ll
