[package]
name = "plaything"
version = "0.1.0"
authors = ["JPNYKW <jpnykw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# inkwell = "0.0.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm7-0" }
regex = "1.0"
